Background and foreground colors do not have a sufficient contrast ratio - lighthouse audit - fixed - color contrast and scheme updated

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -50,7 +50,7 @@ p.description {
 }
 
 a {
-    color: #219ab3;
+    color: #0d09ff;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
@@ -59,7 +59,7 @@ a {
 a:hover,
 a:focus {
     text-decoration: none;
-    color: #11505d;
+    color: #0f0cc7;
 }
 
 .light {
@@ -309,17 +309,17 @@ a:focus {
 }
 
 .btn-default {
-    border: 1px solid #219ab3;
-    color: #219ab3;
+    border: 1px solid #0d09ff;
+    color: #0d09ff;
     background-color: transparent;
 }
 
 .btn-default:hover,
 .btn-default:focus {
-    border: 1px solid #219ab3;
+    border: 1px solid #0d09ff;
     outline: 0;
-    color: #000;
-    background-color: #219ab3;
+    color: #fff;
+    background-color: #0d09ff;
 }
 
 ul.banner-social-buttons {
